# LET_Framework

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Directory.Build.props  LET_Framework.sln  LET_Framework.vcxproj  README.md
.github/workflows/: builder.yml
exemple/: CMakeLists.txt  main_exemple.c
include/: LET_Framework.h
src/: CMakeLists.txt
src/Core/: LET_Framework_Assert.c  LET_Framework_Assert.h  LET_Framework_Core.c  LET_Framework_Core.h  LET_Framework_Result.h
src/Data_Format/custom/: LET_custom_format.c  custom_format.c
src/Data_Format/json/: Description.md  LET_json_format.c
src/Data_Format/junit/: Description.md  LET_junit_format.c
src/Data_Format/text/: Description.md  LET_text_format.c  text_format.c  text_format.h
src/Data_Format/util/: LET_util_format_string.c  LET_util_format_string.h  LET_util_json_format.c  LET_util_json_format.h  LET_util_xml_fomat.c  LET_util_xml_format.c  LET_util_xml_format.h  format_string.c  format_string.h
src/Data_Format/xml/: Description.md  LET_xml_format.c  xml_format.c
test/: CMakeLists.txt  main_test.c
test/Core/Assert/file_and_line/: CMakeLists.txt  core.test.c
test/Core/Assert/junit/: CMakeLists.txt  core.test.c
test/Core/Core/generic/: CMakeLists.txt  core.test.c
test/Core/Core/junit/: CMakeLists.txt  core.test.c
test/Data_Format/junit/: CMakeLists.txt  junit.test.c
test/Data_Format/util/: CMakeLists.txt  util.test.c
